[package]
name = "graphgen"
version = "0.1.0"
edition = "2021"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
license = "MIT"
homepage = "https://github.com/aneeshdurg/graphgen"
repository = "https://github.com/aneeshdurg/graphgen"
description = "Graph dataset generator"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
clap = { version = "4.5.21", features = ["derive"] }
urlencoding = "2.1.3"
tqdm = "0.7.0"
